[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/enemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/KickObject.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 450.0

[node name="EnemyBody" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 10
script = ExtResource( 2 )

[node name="KickableArea" parent="." instance=ExtResource( 3 )]

[node name="EnemySprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[connection signal="accelDirChanged" from="." to="." method="_on_EnemyBody_accelDirChanged"]
[connection signal="detectedPlayer" from="." to="." method="_on_EnemyBody_detectedPlayer"]
[connection signal="playerEscaped" from="." to="." method="_on_EnemyBody_playerEscaped"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
